# rofyk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
src/rofyk/: __main__.py  argument_parsing.py  paths.py  rofyk.py  ykman.py
src/rofyk/models/: action.py  entry.py  keybinding.py
src/rofyk/selector/: bemenu.py  dmenu.py  fuzzel.py  rofi.py  selector.py  wofi.py
