[project]
name = "rofyk"
version = "0.1.0"
description = "Rofi frontend for ykman"
authors = [
    {name = "Fabian Winter", email = "5821180+fdw@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ConfigArgParse>1.3,<2.0.0",
]

[project.urls]
homepage = "https://github.com/fdw/rofyk"
repository = "https://github.com/fdw/rofyk"

[project.scripts]
rofyk = "rofyk.__main__:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rofyk"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
